# thai-pdf-fixer-for-the-blind

./: .gitignore  .prettierrc  LICENSE  README.md  env.d.ts  next.config.js  output.docx  package-lock.json  package.json  tailwind.config.ts  test_img_only.docx  test_output.docx  tsconfig.json
.claude/: settings.local.json
.github/workflows/: release.yml
backend/: main.py  requirements.txt
public/: manifest.json  sw.js
python/: converter.py  converter.spec  requirements.txt
scripts/: bump-version.mjs  generate-icons.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/alert/: ShowAlert.tsx
src/components/auth/: AuthModalProvider.tsx  ForgotPasswordModal.tsx  LoginModal.tsx  RegisterModal.tsx  index.tsx
src/components/booking-modal/: index.tsx
src/components/calendar/: MobileMonthCalendar.tsx
src/components/container/: index.tsx
src/components/course/: ClassInfoSection.tsx  (+1 more)
src/components/course-package-card/: index.tsx
src/hooks/: useLogin.ts  useRefreshOnLogin.ts
src/layouts/: root-layout.tsx  sidebar-layout.tsx
src/lib/: docx-generator.ts  file-utils.ts  pdf-extractor.ts  segment-api.ts  speech.ts  thai-fixer.ts
src/pages/: _app.tsx  _document.tsx  index.tsx
src/store/: rootReducer.tsx
src/styles/: apex-chart.css  globals.css  input.css  nprogress.css  swiper-custom.css  video-lesson.css
src/types/: course.ts
src/utils/: course-helpers.ts  format-number.ts  validate-pattern.ts
(+65 files in other folders)
