[package]
name = "thai-pdf-fixer"
version = "1.1.3"
description = "Thai PDF to Word converter for the visually impaired"
authors = ["you"]
edition = "2021"

[lib]
name = "thai_pdf_fixer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
